[tool.poetry]
name = "roboticstoolbox-python"
version = "1.1.1"
description = "A Python library for robotics education and research"
authors = [
    "Jesse Haviland <j.haviland@qut.edu.au>",
    "Peter Corke <rvc@petercorke.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/petercorke/robotics-toolbox-python"
documentation = "https://petercorke.github.io/robotics-toolbox-python/"
repository = "https://github.com/petercorke/robotics-toolbox-python"
keywords = ["python", "robotics", "robotics-toolbox", "kinematics", "dynamics", "motion-planning", "trajectory-generation", "jacobian", "hessian", "control", "simulation", "robot-manipulator", "mobile-robot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [
    { include = "roboticstoolbox" }
]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=2.1.3"
spatialmath-python = {path = "/home/robert/learning/forked_packages/spatialmath-python"}
spatialgeometry = ">=1.0.0"
sympy = "*"
pgraph-python = "*"
scipy = "*"
matplotlib = "*"
ansitable = "*"
swift-sim = ">=1.0.0"
rtb-data = "*"
progress = "*"
typing_extensions = "*"

# Optional dependencies
pybullet = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"
pyyaml = "*"
qpsolvers = "*"
quadprog = "*"
pybullet = "*"
bdsim = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"
sphinx-autorun = "*"
sphinx_autodoc_typehints = "*"
sphinx-favicon = "*"

[tool.poetry.scripts]
eigdemo = "roboticstoolbox.examples.eigdemo:main"
tripleangledemo = "roboticstoolbox.examples.tripleangledemo:main"
twistdemo = "roboticstoolbox.examples.twistdemo:main"
rtbtool = "roboticstoolbox.bin.rtbtool:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".github",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "**/*.ipynb"
]

[tool.ruff.lint]
ignore = ["E741", "E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


